@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.7.15-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-07-15 12:02:54, took 00:07:34, with 60 workers, on 551 cases, 0 failed, 0 traces, 3 retries
+-;-;-;2024-07-15 13:58:17, took 00:10:44, with 60 workers, on 551 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
